highlight development builds

--- a/src/app/components/app-footer/app-footer.component.html
+++ b/src/app/components/app-footer/app-footer.component.html
@@ -3,6 +3,6 @@
         {{ project.name }} &copy; {{ project.copyright }}.
     </span>
     <span *ngIf="(config$|async)?.project.poweredBy" class="ml-auto">
-        Powered by <a href="https://github.com/kiwi-suite" target="_blank">kiwi</a>
+        Powered by <a href="https://github.com/kiwi-suite/kiwi" target="_blank">kiwi</a>
     </span>
 </footer>
