added global error handler, logger service, user service, permission guard, login component removed asset hashes

--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -14,3 +14,5 @@
     <app-aside></app-aside>
 </div>
 <app-footer></app-footer>
+
+<pre *ngIf="config$ | async as config">{{ config | json }}</pre>
