--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -6,6 +6,9 @@
     <button class="navbar-toggler d-md-down-none mr-auto" type="button" appSidebarToggler>
         <span class="navbar-toggler-icon"></span>
     </button>
+    <span>
+        {{ (user.user$ | async)?.email }}
+    </span>
     <button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>
         <span class="navbar-toggler-icon"></span>
     </button>
