--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -8,6 +8,7 @@
             <app-breadcrumbs></app-breadcrumbs>
         </ol>
         <div class="container-fluid">
+            <pre id="debug" *ngIf="config$ | async as config">{{ config | json }}</pre>
             <router-outlet></router-outlet>
         </div><!-- /.conainer-fluid -->
     </main>
@@ -15,4 +16,3 @@
 </div>
 <app-footer></app-footer>
 
-<pre *ngIf="config$ | async as config">{{ config | json }}</pre>
