--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -2,20 +2,20 @@
 
 #debug {
   position: absolute;
-  bottom: 0;
+  top: 101px;
   right: 0;
   font-size: $font-size-base * 0.7;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0,0,0,0.7);
   padding: 10px;
-  color: rgba(255,255,255,0.3);
-  height: 50px;
-  overflow: hidden;
+  color: rgba(255,255,255,0.7);
+  //height: 50px;
+  //overflow: hidden;
   margin: 0;
 
   &:hover {
     background: rgba(0,0,0,0.9);
     color: rgba(255,255,255,1);
-    height: auto;
-    overflow: auto;
+    //height: auto;
+    //overflow: auto;
   }
 }
