refactored bootstrap to be more declarative and reactive fixed bootstrap not applying through any entrypoint added asset url to angular bootstrap configuration added debug and loader component

--- a/src/app/containers/full-layout/full-layout.component.html
+++ b/src/app/containers/full-layout/full-layout.component.html
@@ -8,7 +8,8 @@
             <app-breadcrumbs></app-breadcrumbs>
         </ol>
         <div class="container-fluid">
-            <pre id="debug" *ngIf="config$ | async as config">{{ config | json }}</pre>
+            <app-debug></app-debug>
+            <app-loader></app-loader>
             <router-outlet></router-outlet>
         </div><!-- /.conainer-fluid -->
     </main>
