--- a/src/app/containers/simple-layout/simple-layout.component.html
+++ b/src/app/containers/simple-layout/simple-layout.component.html
@@ -1,3 +1,3 @@
-<pre id="debug" *ngIf="config$ | async as config">{{ config | json }}</pre>
+<app-debug></app-debug>
+<app-loader></app-loader>
 <router-outlet></router-outlet>
-
