--- a/src/kiwi/views/auth/login.component.html
+++ b/src/kiwi/views/auth/login.component.html
@@ -1,4 +1,4 @@
-<div class="app flex-row align-items-center">
+<div class="app flex-row align-items-center" *ngIf="ready$ | async">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -63,10 +63,10 @@
                                     </div>
                                 </div>
                             </form>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
