--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -2,13 +2,37 @@
     <button class="navbar-toggler d-lg-none" type="button" appMobileSidebarToggler>
         <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="#"></a>
+    <a class="navbar-brand" href=""></a>
+    <!--<a class="navbar-brand" href="" routerLink=""></a>-->
     <button class="navbar-toggler d-md-down-none mr-auto" type="button" appSidebarToggler>
         <span class="navbar-toggler-icon"></span>
     </button>
-    <span>
-        {{ (user.user$ | async)?.email }}
-    </span>
+    <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item d-md-down-none">
+            <a class="nav-link" href="#"><i class="icon-bell"></i><span class="badge badge-pill badge-danger">5</span></a>
+        </li>
+        <li class="nav-item dropdown" dropdown placement="bottom right">
+            <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" dropdownToggle (click)="false">
+                <i class="fa fa-fw fa-2x fa-user"></i>
+                <!--<img src="assets/img/avatars/6.jpg" class="img-avatar" alt="{{ (user.user$ | async)?.email }}">-->
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" *dropdownMenu aria-labelledby="simple-dropdown">
+                <!--<div class="dropdown-header text-center"><strong>Account</strong></div>-->
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-bell-o"></i> Updates<span class="badge badge-info">42</span></a>-->
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-envelope-o"></i> Messages<span class="badge badge-success">42</span></a>-->
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-tasks"></i> Tasks<span class="badge badge-danger">42</span></a>-->
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-comments"></i> Comment<span class="badge badge-warning">42</span></a>-->
+                <div class="dropdown-header text-center"><strong>Settings</strong></div>
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>-->
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Setting</a>-->
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-usd"></i> Payments<span class="badge badge-dark">42</span></a>-->
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a>-->
+                <!--<div class="divider"></div>-->
+                <!--<a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>-->
+                <a class="dropdown-item" (click)="logout()"><i class="fa fa-lock"></i> Logout</a>
+            </div>
+        </li>
+    </ul>
     <button class="navbar-toggler d-md-down-none" type="button" appAsideMenuToggler>
         <span class="navbar-toggler-icon"></span>
     </button>
