--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -29,7 +29,7 @@
                 <!--<a class="dropdown-item" href="#"><i class="fa fa-file"></i> Projects<span class="badge badge-primary">42</span></a>-->
                 <!--<div class="divider"></div>-->
                 <!--<a class="dropdown-item" href="#"><i class="fa fa-shield"></i> Lock account</a>-->
-                <a class="dropdown-item" (click)="logout()"><i class="fa fa-lock"></i> Logout</a>
+                <button class="dropdown-item" (click)="logout()" type="button"><i class="fa fa-lock"></i> Logout</button>
             </div>
         </li>
     </ul>
