updated default image names for whitelableing

--- a/src/scss/_core-variables.scss
+++ b/src/scss/_core-variables.scss
@@ -1,1 +1,4 @@
 // core overrides
+
+$navbar-brand-logo: url('../assets/img/kiwi-logo.svg') !default;
+$navbar-brand-minimized-logo: url('../assets/img/kiwi-icon.svg') !default;
