fixed app loader component default image

--- a/src/app/components/app-loader/app-loader.component.html
+++ b/src/app/components/app-loader/app-loader.component.html
@@ -1,6 +1,6 @@
 <div id="loader" *ngIf="!(ready$ | async)">
     <div>
-        <img src="{{ assetsUrl }}/assets/img/icon.svg" alt="">
+        <img src="{{ assetsUrl }}/assets/img/kiwi-icon.svg" alt="">
     </div>
     <div class="message">
         <span class="text-muted text-uppercase" *ngIf="loading">
