--- a/src/app/containers/simple-layout/simple-layout.component.html
+++ b/src/app/containers/simple-layout/simple-layout.component.html
@@ -1,4 +1,4 @@
 <!-- TODO remove debug for builds -->
-<!--<app-debug></app-debug>-->
+<app-debug></app-debug>
 <app-loader></app-loader>
 <router-outlet></router-outlet>
