--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -41,17 +41,18 @@
                                         </div>
                                     </div>
                                     <div class="form-label-group">
-                                        <input formControlName="password" id="password" type="password" class="form-control"
+                                        <input formControlName="password" id="password" type="password"
+                                               class="form-control"
                                                placeholder="Password" autocomplete="current-password"
                                                (keyup)="showError = false"
                                                [ngClass]="{'is-invalid': form.get('password').invalid && form.get('password').dirty}">
                                         <label for="password">Password</label>
                                     </div>
                                     <!--<div class="invalid-feedback ml-5"-->
-                                         <!--*ngIf="form.get('password').invalid && (form.get('password').dirty || form.get('password').touched)">-->
-                                        <!--<div *ngIf="form.get('password').errors.required">-->
-                                        <!--Password is required.-->
-                                        <!--</div>-->
+                                    <!--*ngIf="form.get('password').invalid && (form.get('password').dirty || form.get('password').touched)">-->
+                                    <!--<div *ngIf="form.get('password').errors.required">-->
+                                    <!--Password is required.-->
+                                    <!--</div>-->
                                     <!--</div>-->
                                 </div>
                                 <div class="row">
