--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,48 +1,5 @@
 // Here you can add other styles
 
-#loader {
-    background: $white;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 9999;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    > div {
-        width: 160px;
-        .message {
-            font-weight: bold;
-            font-size: 80%;
-        }
-    }
-}
-
-#debug {
-    z-index: 99999;
-    position: absolute;
-    bottom: 50px;
-    left: 0;
-    font-size: $font-size-base * 0.7;
-    background: rgba(0, 0, 0, 0.3);
-    opacity: 0.1;
-    padding: 10px;
-    //height: 50px;
-    //overflow: hidden;
-    margin: 0;
-
-    pre {
-        color: rgba(255, 255, 255, 0.7);
-    }
-
-    &:hover {
-        background: rgba(0, 0, 0, 0.9);
-        opacity: 1;
-        color: rgba(255, 255, 255, 1);
-        //height: auto;
-        //overflow: auto;
-    }
+.card {
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 }
