--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 // Override variables
 @import "variables";
 // Import admin styles
-@import "~@kiwi-suite/ngx-admin/src/lib/scss/ngx-admin";
+//@import "~kiwi-suite/ngx-admin/src/lib/scss/ngx-admin";
+@import "../../projects/kiwi-suite/ngx-admin/src/lib/scss/ngx-admin";
 // Custom styles
 @import "custom";
