--- a/projects/kiwi-suite/ngx-admin/src/lib/components/media-selector/media-selector.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/media-selector/media-selector.component.html
@@ -9,7 +9,8 @@
         </div>
         <div class="d-block mb-4 h-100" *ngIf="media">
             <div *ngIf="isImage(media.mimeType)" class="media-container">
-                <div class="media-image" [ngStyle]="{backgroundImage: 'url(/media/img/admin-thumb/' + media.basePath + media.filename + ')'}"></div>
+                <div class="media-image"
+                     [ngStyle]="{backgroundImage: 'url(/media/img/admin-thumb/' + media.basePath + media.filename + ')'}"></div>
                 <div class="media-image-title p-1 text-nowrap text-truncate">
                     <a (click)="remove()"><span class="fa fa-close"></span></a>&nbsp;<small>{{ media.filename }}</small>
                 </div>
