white labeling through project config

--- a/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.scss
@@ -16,7 +16,7 @@
     &:after {
         content: " ";
         position: absolute;
-        background: url('../../assets/img/kiwi-icon.svg') bottom right no-repeat;
+        background: url('../../assets/img/kiwi-logo.svg') bottom right no-repeat;
         width: 100px;
         height: 100px;
         right: 20px;
