login component logo position

--- a/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.scss
@@ -10,7 +10,8 @@
     background: rgba(255, 255, 255, 0.8);
     padding: 10px;
     //height: 50px;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
     margin: 0;
 
     &:after {
