--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_custom.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_custom.scss
@@ -1,13 +1,34 @@
 // Here you can add other styles
 
+// == background
+
+.background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  opacity: 0.7;
+  background-position: center center;
+  background-size: cover;
+  //background-image: url('../assets/img/background.jpg');
+}
+
+// == cards
+
 .card {
   box-shadow: 0 0 7px rgba(0, 0, 0, 0.1);
 }
+
+// == forms
 
 input[type="color"] {
   height: $input-height;
   padding: 2px 4px;
 }
+
+// == navbar
 
 .app-header.navbar {
   .navbar-brand {
