--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/media-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/media-edit.component.html
@@ -3,7 +3,7 @@
         <form [formGroup]="form" (ngSubmit)="onSubmit(action)" *ngIf="form && (action$ | async) as action">
             <div class="card card-accent-primary">
                 <div class="card-header">
-                    <b class="text-muted">{{ model.title || resourceName }}</b>
+                    <b class="text-muted">{{ model.title || (resourceName$ | async) }}</b>
                 </div>
                 <div class="card-body">
                     <div class="form-group">
