--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-detail.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-detail.component.html
@@ -2,10 +2,9 @@
     <div class="col-sm-6">
         <div class="card">
             <div class="card-header">
-                {{ resourceName }}
+                <b class="text-muted">{{ resourceName$ | async }}</b>
             </div>
             <div class="card-body">
-
             </div>
         </div>
     </div>
