--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/media-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/media-list.component.html
@@ -1,6 +1,6 @@
 <div class="card card-accent-primary">
     <div class="card-header">
-        <b class="text-muted">{{ resourceNamePlural }}</b>
+        <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
     </div>
     <div class="card-body">
         <div class="row text-center text-lg-left" *ngIf="uploader">
