--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-list.component.html
@@ -1,6 +1,6 @@
 <div class="card card-accent-primary">
     <div class="card-header">
-        {{ resourceName }} Entries
+        <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
         <div class="card-actions">
             <a routerLink="/resource/{{ resourceKey }}/create">
                 <i class="fa fa-plus"></i>
