--- a/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-list.component.html
@@ -1,6 +1,6 @@
 <div class="card card-accent-primary">
     <div class="card-header">
-        <b class="text-muted">{{ resourceName }}s</b>
+        <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
         <div class="card-actions">
             <a routerLink="/{{ resourceKey }}/create">
                 <i class="fa fa-plus"></i>
@@ -18,8 +18,7 @@
                 [headerHeight]="50"
                 [footerHeight]="50"
                 [limit]="limit"
-                [reorderable]="reorderable"
-        >
+                [reorderable]="reorderable" >
             <!--(page)="onPage($event)"-->
 
             <ngx-datatable-column
