--- a/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.scss
@@ -5,26 +5,37 @@
     right: 0;
     bottom: 0;
     left: 0;
+    background: rgba(235, 235, 235, 0.8);
     font-size: 0.9em;
-    font-weight: bold;
-    background: rgba(255, 255, 255, 0.8);
-    padding: 10px;
+    //font-weight: bold;
     //height: 50px;
     overflow-x: hidden;
     overflow-y: auto;
     margin: 0;
+    padding: 5px 10px;
+
+    .bg-light-transparent {
+        color: #000;
+        background: rgba(255, 255, 255, 0.5);
+        padding: 10px;
+    }
 
     &:after {
         content: " ";
         position: absolute;
-        background: url('../../assets/img/kiwi-logo.svg') bottom right no-repeat;
-        width: 100px;
-        height: 100px;
-        right: 20px;
-        bottom: 40px;
+        background: url('../../assets/img/kiwi-logo.svg') top center  no-repeat;
+        top: 5px;
+        left: 50%;
+        margin-left: -60px;
+        width: 120px;
+        height: 80px;
+    }
+
+    .lead {
+        line-height: 1em;
     }
 
     pre {
-        color: #000;
+        margin-bottom: 0;
     }
 }
