--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-edit.component.html
@@ -10,15 +10,21 @@
                 </div>
                 <div class="card-footer">
                     <button type="submit" class="btn btn-primary">
-                        <i class="fa fa-save"></i>
+                        <i class="fa fa-fw fa-save"></i>
                         <span *ngIf="action === 'create'">Create</span>
                         <span *ngIf="action === 'edit'">Update</span>
+                    </button>
+                    <button type="button" class="btn btn-outline-danger pull-right"
+                            [disabled]="(loading$ | async)"
+                            (click)="onDelete()"
+                            *ngIf="action === 'edit'">
+                        <i class="fa fa-trash"></i>
                     </button>
                 </div>
             </div>
         </form>
     </div>
-    <div class="col-md-4 col-lg-5 col-xl-6">
-        <pre>{{ this.form.getRawValue() | json }}</pre>
-    </div>
+    <!--<div class="col-md-4 col-lg-5 col-xl-6">-->
+        <!--<pre>{{ this.form.getRawValue() | json }}</pre>-->
+    <!--</div>-->
 </div>
