--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-list.component.html
@@ -2,7 +2,8 @@
     <div class="card-header">
         <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
         <div class="card-actions">
-            <a routerLink="/resource/{{ resourceKey }}/create">
+            <a routerLink="/resource/{{ resourceKey }}/create"
+               *can="['admin.api.'+resourceKey+'.create']">
                 <i class="fa fa-plus"></i>
             </a>
         </div>
@@ -63,7 +64,8 @@
                 </ng-template>
                 <ng-template let-value="value" ngx-datatable-cell-template>
                     <div class="text-right">
-                        <a routerLink="/resource/{{ resourceKey }}/{{ value }}/edit" class="btn btn-sm btn-primary">
+                        <a routerLink="/resource/{{ resourceKey }}/{{ value }}/edit" class="btn btn-sm btn-primary"
+                           *can="['admin.api.'+resourceKey+'.edit']">
                             <i class="fa fa-pencil"></i>
                         </a>
                     </div>
