--- a/projects/kiwi-suite/ngx-admin/src/lib/containers/full-layout/full-layout.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/containers/full-layout/full-layout.component.html
@@ -1,3 +1,6 @@
+<app-background></app-background>
+<app-debug></app-debug>
+<app-loader></app-loader>
 <app-header></app-header>
 <div class="app-body">
     <app-sidebar></app-sidebar>
