--- a/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/account/account.component.html
@@ -11,10 +11,12 @@
                     </div>
                     <div class="form-group">
                         <input formControlName="email" type="email" class="form-control"
+                               autocomplete="new-email"
                                placeholder="New email address">
                     </div>
                     <div class="form-group">
                         <input formControlName="emailRepeat" type="email" class="form-control"
+                               autocomplete="new-email"
                                placeholder="Confirm email address">
                     </div>
                     <div class="form-group form-actions">
@@ -35,14 +37,17 @@
                 <div class="card-body">
                     <div class="form-group">
                         <input formControlName="passwordOld" type="password" class="form-control"
+                               autocomplete="password"
                                placeholder="Current password">
                     </div>
                     <div class="form-group">
                         <input formControlName="password" type="password" class="form-control"
+                               autocomplete="new-password"
                                placeholder="New password">
                     </div>
                     <div class="form-group">
                         <input formControlName="passwordRepeat" type="password" class="form-control"
+                               autocomplete="new-password"
                                placeholder="Confirm new password">
                     </div>
                     <div class="form-group form-actions">
