--- a/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-edit.component.html
@@ -10,7 +10,8 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <input formControlName="email" type="email" class="form-control"
-                                       placeholder="New email address">
+                                       autocomplete="email"
+                                       placeholder="Email address">
                             </div>
                             <div class="form-group">
                                 <ng-select [searchable]="false" formControlName="role">
@@ -22,11 +23,13 @@
 
                             <div class="form-group">
                                 <input formControlName="password" type="password" class="form-control"
+                                       autocomplete="password"
                                        placeholder="Password">
                             </div>
 
                             <div class="form-group">
                                 <input formControlName="passwordRepeat" type="password" class="form-control"
+                                       autocomplete="password"
                                        placeholder="Repeat password">
                             </div>
                         </div>
@@ -75,9 +78,10 @@
                         </div>
                     </div>
                     <div class="card-footer" *ngIf="model.id !== account.id">
-                        <button type="button" class="btn btn-ouline-danger pull-right"
+                        <button type="button" class="btn btn-outline-danger pull-right"
                                 [disabled]="(loading$ | async)"
-                                (click)="onDelete()">
+                                (click)="onDelete()"
+                                *can="['admin.api.'+resourceKey+'.delete']">
                             <i class="fa fa-trash"></i>
                         </button>
                     </div>
@@ -95,10 +99,12 @@
                             </div>
                             <div class="form-group">
                                 <input formControlName="email" type="email" class="form-control"
+                                       autocomplete="new-email"
                                        placeholder="New email address">
                             </div>
                             <div class="form-group">
                                 <input formControlName="emailRepeat" type="email" class="form-control"
+                                       autocomplete="new-email"
                                        placeholder="Confirm new email address">
                             </div>
                         </div>
