--- a/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/user/user-list.component.html
@@ -2,7 +2,8 @@
     <div class="card-header">
         <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
         <div class="card-actions">
-            <a routerLink="/{{ resourceKey }}/create">
+            <a routerLink="/{{ resourceKey }}/create"
+               *can="['admin.api.'+resourceKey+'.create']">
                 <i class="fa fa-plus"></i>
             </a>
         </div>
@@ -18,7 +19,7 @@
                 [headerHeight]="50"
                 [footerHeight]="50"
                 [limit]="limit"
-                [reorderable]="reorderable" >
+                [reorderable]="reorderable">
             <!--(page)="onPage($event)"-->
 
             <ngx-datatable-column
@@ -76,7 +77,8 @@
                 </ng-template>
                 <ng-template let-value="value" ngx-datatable-cell-template>
                     <div class="text-right">
-                        <a routerLink="/{{ resourceKey }}/{{ value }}/edit" class="btn btn-sm btn-primary">
+                        <a routerLink="/{{ resourceKey }}/{{ value }}/edit" class="btn btn-sm btn-primary"
+                           *can="['admin.api.'+resourceKey+'.edit']">
                             <i class="fa fa-pencil"></i>
                         </a>
                     </div>
