--- a/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.html
@@ -1,6 +1,6 @@
 <div id="debug" *ngIf="show">
-    <button class="btn btn-dark btn-lg pull-right" type="button">
-        <strong style="line-height: 1em" (click)="toggle()">
+    <button class="btn btn-dark btn-lg pull-right" type="button" (click)="toggle()">
+        <strong style="line-height: 1em">
             &times;
         </strong>
     </button>
