--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_loader.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_loader.scss
@@ -1,5 +1,9 @@
 #loader {
-    background: #ffffff;
+    background-color: $body-bg;
+    background-image: url('../assets/img/kiwi-icon.svg');
+    background-position: center center;
+    background-size: 180px auto;
+    background-repeat: no-repeat;
     position: absolute;
     top: 0;
     left: 0;
@@ -11,6 +15,7 @@
     justify-content: center;
     align-items: center;
     > div {
+        margin-top: 160px;
         width: 160px;
         .message {
             font-weight: bold;
