--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/ngx-admin.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/ngx-admin.scss
@@ -25,5 +25,6 @@
 // Custom styles
 @import "custom";
 @import "floating-labels";
+@import "loader";
 @import "media";
 @import "~ngx-toastr/toastr-bs4-alert";
