--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-edit.component.html
@@ -27,6 +27,6 @@
         </form>
     </div>
     <!--<div class="col-md-4 col-lg-5 col-xl-6">-->
-    <!--<pre>{{ this.form.getRawValue() | json }}</pre>-->
+        <!--<pre *ngIf="this.form">{{ this.form.getRawValue() | json }}</pre>-->
     <!--</div>-->
 </div>
