detach media modal list from routed media list

--- a/projects/kiwi-suite/ngx-admin/src/lib/views/media/components/media-modal-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/media/components/media-modal-list.component.html
@@ -8,7 +8,7 @@
                         <button class="btn btn-primary" type="button">Choose a file</button>
                         <p>or drag it here</p>
                     </div>
-                    <input class="file-upload" type="file" ng2FileSelect [uploader]="uploader" multiple/>
+                    <input class="file-upload" type="file" ng2FileSelect [uploader]="uploader" multiple>
                 </div>
             </div>
 
