--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list.component.html
@@ -1,17 +1,21 @@
-<div class="row">
-    <div class="col-12">
-        <div class="card card-accent-primary">
-            <div class="card-header">
-
-            </div>
-            <div class="card-body">
-                <div class="ngx-dnd-container" ngxDroppable [model]="items" (drop)="drop($event)" (drag)="drag($event)" [dropZone]="dropZone">
-                    <div class="ngx-dnd-item has-handle" ngxDraggable *ngFor="let item of items" [model]="item" [dropZones]="['page']">
-                        <app-sitemap-list-item [item]="item" (dropped)="drop($event)" (dragged)="drag($event)"></app-sitemap-list-item>
-                    </div>
-                </div>
+<div class="card card-accent-primary">
+    <div class="card-header">
+        <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
+        <div class="card-actions">
+            <a routerLink="/{{ resourceKey }}/create"
+               *can="['admin.api.'+resourceKey+'.create']">
+                <i class="fa fa-plus"></i>
+            </a>
+        </div>
+    </div>
+    <div class="card-body">
+        <div class="ngx-dnd-container" ngxDroppable [model]="items" (drop)="drop($event)" (drag)="drag($event)"
+             [dropZone]="dropZone">
+            <div class="ngx-dnd-item has-handle" ngxDraggable *ngFor="let item of items" [model]="item"
+                 [dropZones]="['page']">
+                <app-sitemap-list-item [item]="item" (dropped)="drop($event)"
+                                       (dragged)="drag($event)"></app-sitemap-list-item>
             </div>
         </div>
     </div>
 </div>
-
