--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_datatable.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_datatable.scss
@@ -6,7 +6,9 @@ bootstrap table theme
 
     .datatable-header {
         height: unset !important;
+
         .datatable-header-cell {
+
             vertical-align: bottom;
             padding: 0.75rem;
             border-bottom: 1px solid #d1d4d7;
@@ -27,11 +29,12 @@ bootstrap table theme
             vertical-align: top;
             border-top: 1px solid $gray-100;
             &.datatable-row-even {
-                background-color: rgba(0, 0, 0, 0.05);
+                background-color: lighten($primary, 48%);
+                //background-color: rgba(0, 0, 0, 0.05);
             }
             &.active {
-                background-color: #1483ff;
-                color: #FFF;
+                background-color: $primary;
+                color: $white;
             }
             .datatable-body-cell {
                 text-align: left;
