--- a/projects/kiwi-suite/ngx-admin/src/lib/scss/_tree.scss
+++ b/projects/kiwi-suite/ngx-admin/src/lib/scss/_tree.scss
@@ -1,26 +1,11 @@
 .sitemap-container {
-    background-color: #f0f9fc;
     transition: opacity 0.4s ease-in-out;
-    border: 1px solid #daf1f8;
-    margin-bottom: 5px;
-}
-
-.sitemap-drag-handle {
-    border-right: 1px solid #c5e9f3;
-    background-color: #daf1f8;
-    padding: 12px 14px;
-    color: #6aa3d5;
 }
 
 .sitemap-label {
-    padding: 8px 0 8px 10px;
-    color: #6aa3d5;
-}
-
-.sitemap-toolbar {
-    border-left: 1px solid #c5e9f3;
-    background-color: #daf1f8;
-    padding: 8px 12px;
+    border-top: 1px solid $gray-200;
+    border-bottom: 1px solid $gray-200;
+    background-color: lighten($primary, 49%);
 }
 
 .ngx-dnd-container {
@@ -28,14 +13,20 @@
     padding: 0 0 0 20px !important;
     border: none !important;
     background-color: transparent !important;
+
+    .card-body > & {
+        padding: 0 !important;
+    }
 }
 
 .ngx-dnd-container.gu-empty {
     border: none !important;
 }
+
 .ngx-dnd-container:nth-child(odd) {
     background-color: rgba(0, 0, 0, 0.2);
 }
+
 .ngx-dnd-container .ex-moved {
     background-color: #e74c3c;
 }
@@ -43,6 +34,7 @@
 .ngx-dnd-container .ex-over {
     background-color: rgba(255, 255, 255, 0.3);
 }
+
 .ngx-dnd-container .handle {
     padding: 0 5px;
     margin-right: 5px;
@@ -62,8 +54,8 @@
     -ms-user-select: none;
     /* IE/Edge */
     user-select: none;
-    /* non-prefixed version, currently
-                                    not supported by any browser */ }
+    /* non-prefixed version, currently not supported by any browser */
+}
 
 .ngx-dnd-item {
     margin: 0 !important;
@@ -72,6 +64,7 @@
     background-color: transparent !important;
     border: none !important;
 }
+
 .ngx-dnd-item:not(.has-handle):not(.move-disabled),
 .ngx-dnd-item.has-handle [ngxdraghandle],
 .ngx-dnd-item.has-handle [ngxDragHandle] {
@@ -80,9 +73,11 @@
     cursor: -moz-grab;
     cursor: -webkit-grab;
 }
+
 .ngx-dnd-item .ngx-dnd-content {
     user-select: none;
 }
+
 .ngx-dnd-item:hover {
     border: 1px solid blue;
 
@@ -98,18 +93,22 @@
     z-index: 9999 !important;
     opacity: 0.8;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-    filter: alpha(opacity=80); }
+    filter: alpha(opacity=80);
+}
 
 .gu-hide {
-    display: none !important; }
+    display: none !important;
+}
 
 .gu-unselectable {
     -webkit-user-select: none !important;
     -moz-user-select: none !important;
     -ms-user-select: none !important;
-    user-select: none !important; }
+    user-select: none !important;
+}
 
 .gu-transit {
     opacity: 0.2;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
-    filter: alpha(opacity=20); }
+    filter: alpha(opacity=20);
+}
