--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list-item.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list-item.component.html
@@ -1,38 +1,69 @@
-<div class="sitemap-container d-flex mb-2">
-    <div class="btn btn-sm btn-outline-secondary px-2 d-flex flex-column justify-content-center"
-         ngxDragHandle>
-        <i class="fa fa-fw fa-bars text-muted"></i>
-    </div>
-    <div class="sitemap-label flex-grow-1 py-2 px-3">
-        <div>
-            {{ item.label }}
+<ng-container [ngSwitch]="type">
+
+    <ng-container *ngSwitchCase="'array'">
+        <app-sitemap-list-container
+                [model]="model"
+                [template]="container.template"
+                [dropZone]="dropZone"
+                [dropZones]="dropZones"
+                [removeOnSpill]="removeOnSpill"
+                [droppableItemClass]="droppableItemClass"
+                [copy]="copy"
+                (drop)="onDrop($event)">
+        </app-sitemap-list-container>
+    </ng-container>
+
+    <ng-container *ngSwitchCase="'object'">
+        <ng-template
+                *ngIf="container.template"
+                [ngTemplateOutlet]="container.template"
+                [ngTemplateOutletContext]="data">
+        </ng-template>
+        <ng-container *ngIf="!container.template">
+            <div class="sitemap-container d-flex mb-2">
+                <div class="btn btn-sm btn-outline-secondary px-2 d-flex flex-column justify-content-center"
+                     ngxDragHandle>
+                    <i class="fa fa-fw fa-bars text-muted"></i>
+                </div>
+                <div class="sitemap-label flex-grow-1 py-2 px-3">
+                    <div>
+                        {{ model.label }}
+                    </div>
+                </div>
+                <button class="btn btn-sm btn-primary p-2 d-flex flex-column justify-content-center"
+                        type="button"
+                        routerLink="">
+                    <i class="fa fa-fw fa-pencil"></i>
+                </button>
+            </div>
+            <app-sitemap-list-container
+                    *ngIf="model.children"
+                    [model]="model.children"
+                    [template]="container.template"
+                    [dropZone]="dropZone"
+                    [dropZones]="dropZones"
+                    [removeOnSpill]="removeOnSpill"
+                    [droppableItemClass]="droppableItemClass"
+                    [copy]="copy"
+                   (drop)="onDrop($event)">
+            </app-sitemap-list-container>
+        </ng-container>
+    </ng-container>
+
+    <ng-container *ngSwitchCase="'undefined'">
+    </ng-container>
+
+    <ng-container *ngSwitchDefault>
+        <ng-template
+                *ngIf="container.template"
+                [ngTemplateOutlet]="container.template"
+                [ngTemplateOutletContext]="data">
+        </ng-template>
+        <div
+                *ngIf="!container.template"
+                class="ngx-dnd-content">
+            {{model}}
         </div>
-    </div>
-    <button class="btn btn-sm btn-primary p-2 d-flex flex-column justify-content-center"
-            type="button"
-            routerLink="">
-        <i class="fa fa-fw fa-pencil"></i>
-    </button>
-</div>
-<div *ngIf="item.children.length > 0" class="ngx-dnd-container" ngxDroppable
-     [model]="item.children"
-     [dropZone]="dropZone"
-     (drop)="drop($event)"
-     (drag)="drag($event)">
-    <div class="ngx-dnd-item has-handle" ngxDraggable
-         *ngFor="let item of item.children"
-         [model]="item"
-         [dropZones]="['page']">
-        <app-sitemap-list-item [item]="item"
-                               (dropped)="drop($event)"
-                               (dragged)="drag($event)">
-        </app-sitemap-list-item>
-    </div>
-</div>
-<ngx-dnd-container *ngIf="item.children.length === 0"
-                   [model]="item.children"
-                   [dropZones]="['page']"
-                   [dropZone]="dropZone"
-                   (drop)="drop($event)"
-                   (drag)="drag($event)">
-</ngx-dnd-container>
+    </ng-container>
+
+</ng-container>
