--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list-container.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list-container.component.html
@@ -18,6 +18,7 @@
                     [removeOnSpill]="removeOnSpill"
                     [droppableItemClass]="droppableItemClass"
                     (drop)="onDrop($event)"
+                    [locale]="locale"
             >
             </app-sitemap-list-item>
         </ng-container>
