--- a/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/components/app-debug/app-debug.component.html
@@ -54,4 +54,13 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="bg-light-transparent mb-3" *ngIf="(config$ | async) as config">
+                <p class="lead">Default Locale: <b>{{ config.intl.default }}</b></p>
+                <p class="lead">Locales</p>
+                <pre>{{ config.intl.locales | json }}</pre>
+            </div>
+        </div>
+    </div>
 </div>
