--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list.component.html
@@ -2,19 +2,28 @@
     <div class="card-header">
         <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
         <div class="card-actions">
-            <a routerLink="/{{ resourceKey }}/create"
+            <a [routerLink]="['sitemap', 'create', selectedLocale]"
                *can="['admin.api.'+resourceKey+'.create']">
                 <i class="fa fa-plus"></i>
             </a>
         </div>
     </div>
     <div class="card-body">
+        <ng-container *ngIf="(models$ | async) as items">
+            <div class="row">
+                <div class="col-sm-12 col-xs-12 col-md-3 col-lg-3 offset-md-9 offset-lg-9">
+                    <ng-select [items]="locales" bindLabel="name" bindValue="locale" [(ngModel)]="selectedLocale" [clearable]="false"></ng-select>
+                </div>
+            </div>
 
-        <app-sitemap-list-container [model]="items" (drop)="drop($event)">
+            <ng-container *ngIf="items.length === 0">
+                sadasd
+            </ng-container>
+            <ng-container *ngIf="items.length > 0">
+                <app-sitemap-list-container [model]="items" (drop)="drop($event)" [locale]="selectedLocale">
 
-        </app-sitemap-list-container>
-
-        {{items | json}}
-
+                </app-sitemap-list-container>
+            </ng-container>
+        </ng-container>
     </div>
 </div>
