--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list-container.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list-container.component.html
@@ -1,11 +1,10 @@
-<div
-        ngxDroppable
-        [dropZone]="dropZone"
-        [model]="model"
-        [copy]="copy"
-        [ngClass]="{ 'gu-empty': !model?.length }"
-        [removeOnSpill]="removeOnSpill"
-        class='ngx-dnd-container'>
+<div ngxDroppable
+     [dropZone]="dropZone"
+     [model]="model"
+     [copy]="copy"
+     [ngClass]="{ 'gu-empty': !model?.length }"
+     [removeOnSpill]="removeOnSpill"
+     class='ngx-dnd-container'>
     <ng-container *ngIf="model">
         <ng-container *ngFor="let item of model">
             <app-sitemap-list-item
