--- a/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-edit.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/resource/resource-edit.component.html
@@ -1,6 +1,8 @@
-<div class="row">
+<div class="row" *ngIf="schema$ | async as schema">
     <div class="col-md-8 col-lg-7 col-xl-6">
-        <form [formGroup]="form" (ngSubmit)="onSubmit(action)" *ngIf="form && (action$ | async) as action">
+        <form [formGroup]="form"
+              (ngSubmit)="onSubmit(action)"
+              *ngIf="form && fields && (action$ | async) as action">
             <div class="card card-accent-primary">
                 <div class="card-header">
                     <b class="text-muted">{{ resourceName$ | async }}</b>
