--- a/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list.component.html
+++ b/projects/kiwi-suite/ngx-admin/src/lib/views/sitemap/sitemap-list.component.html
@@ -1,8 +1,8 @@
-<div class="card card-accent-primary">
+<div class="card card-accent-primary" *ngIf="schema$ | async as schema">
     <div class="card-header">
         <b class="text-muted">{{ resourceNamePlural$ | async }}</b>
         <div class="card-actions">
-            <a [routerLink]="['sitemap', 'create', selectedLocale]"
+            <a [routerLink]="['create', selectedLocale]"
                *can="['admin.api.'+resourceKey+'.create']">
                 <i class="fa fa-plus"></i>
             </a>
@@ -12,16 +12,17 @@
         <ng-container *ngIf="(models$ | async) as items">
             <div class="row">
                 <div class="col-sm-12 col-xs-12 col-md-3 col-lg-3 offset-md-9 offset-lg-9">
-                    <ng-select [items]="locales" bindLabel="name" bindValue="locale" [(ngModel)]="selectedLocale" [clearable]="false"></ng-select>
+                    <ng-select [items]="locales" bindLabel="name" bindValue="locale"
+                               [(ngModel)]="selectedLocale" [clearable]="false"></ng-select>
                 </div>
             </div>
-
             <ng-container *ngIf="items.length === 0">
-                sadasd
+                No Pages
             </ng-container>
             <ng-container *ngIf="items.length > 0">
-                <app-sitemap-list-container [model]="items" (drop)="drop($event)" [locale]="selectedLocale">
-
+                <app-sitemap-list-container [model]="items"
+                                            (drop)="drop($event)"
+                                            [locale]="selectedLocale">
                 </app-sitemap-list-container>
             </ng-container>
         </ng-container>
